--- a/cavestory_demo.xcodeproj/xcshareddata/xcschemes/cavestory_demo.xcscheme
+++ b/cavestory_demo.xcodeproj/xcshareddata/xcschemes/cavestory_demo.xcscheme
@@ -63,6 +63,16 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocStackLogging"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "PrefersMallocStackLoggingLite"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
       <LocationScenarioReference
          identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
